[tool.poetry]
authors = ["Chris <info@exacheck.net>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking :: Monitoring",
  "Topic :: System :: Networking",
]
description = "ExaCheck - ExaBGP Health Checker"
documentation = "https://exacheck.net/deployment/"
homepage = "https://exacheck.net"
keywords = [
  "bgp",
  "exabgp",
  "healthcheck",
  "monitoring",
  "network",
  "networking",
  "networks",
  "routes",
  "routing",
]
name = "exacheck"
readme = "README.md"
repository = "https://github.com/exacheck/exacheck"
version = "0.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.urls]
"Changelog" = "https://exacheck.net/development/changelog/"
"Configuration" = "https://exacheck.net/configuration/"
"Docker Deployment" = "https://exacheck.net/deployment/docker/"

[tool.poetry.scripts]
exacheck = 'exacheck.cli:cli'

[tool.poetry.dependencies]
# Python version required
python = ">=3.10,<3.13"

# ExaBGP itself
# Currently this will only be included as a dependancy when using Python 3.11 or below
# To use Python 3.12 or above, ExaBGP must be installed from source due to the following error:
#   ModuleNotFoundError: No module named 'exabgp.vendoring.six.moves'
#
# To install from source:
#   python3 -m pip --no-cache-dir install "git+https://github.com/Exa-Networks/exabgp.git@4.2"
exabgp = {version = "^4.2.21", python = "<=3.11"}

# General ExaCheck requirements
apprise = "^1.7.6"
loguru = "^0.7.2"
pydantic = "^2.7.0"
pyyaml = "^6.0.1"
setproctitle = "^1.3.3"
tabulate = "^0.9.0"
ujson = "^5.9.0"

# Requirements for the built in health checks
dnspython = "^2.6.1"
icmplib = "^3.0.4"
ntplib = "^0.4.0"
httpx = {extras = ["http2"], version = "^0.27.0"}

# For the CLI
click = "^8.1.7"

# For Sentry support; optional
sentry-sdk = {version = "^1.45.0", optional = true}

[tool.poetry.extras]
sentry = [
  "sentry-sdk",
]
full = [
  "sentry-sdk",
]

# Declare the below groups as optional
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.format]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.dev.dependencies]
# Packages for linting
pycodestyle = "^2.11.1"
pylint = "^3.1.0"
pylint-pydantic = "^0.3.2"
ruff = "^0.3.7"
semgrep = "^1.69.0"

# Misc other development tools
Cython = "^3.0.10"
devtools = {extras = ["pygments"], version = "^0.12.2"}
ipython = "^8.23.0"
Markdown = "^3.6"
pipenv = "^2023.12.1"
rich = "^13.7.1"

# Define the packages for the optional groups
[tool.poetry.group.format.dependencies]
# Packages for code formatting
autopep8 = "^2.1.0"
black = "^24.4.0"
flake8 = "^7.0.0"

[tool.poetry.group.test.dependencies]
# Packages for testing
hypothesis = {extras = ["cli"], version = "^6.100.1"}
pytest = "^8.1.1"
pytest-html = "^4.1.1"

[tool.poetry.group.typing.dependencies]
# Packages for type checking
mypy = "^1.9.0"
pyre-check = "^0.9.19"

# Extensions for type checking
types-pyyaml = "^6.0.12.20240311"
types-requests = "^2.31.0.20240406"
types-tabulate = "^0.9.0"
types-ujson = "^5.9.0"

[tool.autopep8]
# Raise default maximum line length
max_line_length = 120

[tool.flake8]
# Raise default maximum line length
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
log_level = "INFO"
addopts = "-s"

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"
check_untyped_defs = true
