[tool.poetry]
authors = ["Chris <info@exacheck.net>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking :: Monitoring",
  "Topic :: System :: Networking",
]
description = "ExaCheck - ExaBGP Health Checker"
documentation = "https://exacheck.net/deployment/"
homepage = "https://exacheck.net"
keywords = [
  "bgp",
  "exabgp",
  "healthcheck",
  "monitoring",
  "network",
  "networking",
  "networks",
  "routes",
  "routing",
]
name = "exacheck"
readme = "README.md"
repository = "https://github.com/exacheck/exacheck"
version = "0.1.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.urls]
"Changelog" = "https://exacheck.net/development/changelog/"
"Configuration" = "https://exacheck.net/configuration/"
"Docker Deployment" = "https://exacheck.net/deployment/docker/"

[tool.poetry.scripts]
exacheck = 'exacheck.cli:cli'

[tool.poetry.dependencies]
# Python version required
python = ">=3.10,<=3.13"

# ExaBGP itself
exabgp = "^4.2.22"

# General ExaCheck requirements
apprise = "^1.9.0"
loguru = "^0.7.2"
pydantic = {extras = ["timezone"], version = "^2.9.1"}
pyyaml = "^6.0.2"
setproctitle = "^1.3.3"
tabulate = "^0.9.0"
ujson = "^5.10.0"

# Requirements for the built in health checks
dnspython = "^2.6.1"
icmplib = "^3.0.4"
ntplib = "^0.4.0"
httpx = {extras = ["http2"], version = "^0.27.2"}

# For the CLI
click = "^8.1.7"

# For Sentry support; optional
sentry-sdk = {version = "^2.17.0", optional = true}

[tool.poetry.extras]
sentry = [
  "sentry-sdk",
]
full = [
  "sentry-sdk",
]

# Declare the below groups as optional
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.format]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.dev.dependencies]
# Packages for linting
pycodestyle = "^2.12.1"
pylint = "^3.2.7"
pylint-pydantic = "^0.3.2"
ruff = "^0.7.1"
semgrep = "^1.85.0"

# Misc other development tools
Cython = "^3.0.11"
devtools = {extras = ["pygments"], version = "^0.12.2"}
ipython = "^8.29.0"
Markdown = "^3.7"
pipenv = "^2024.2.0"
rich = "^13.9.3"

# Define the packages for the optional groups
[tool.poetry.group.format.dependencies]
# Packages for code formatting
autopep8 = "^2.3.1"
black = "^24.8.0"
flake8 = "^7.1.1"

[tool.poetry.group.test.dependencies]
# Packages for testing
hypothesis = {extras = ["cli"], version = "^6.115.5"}
pytest = "^8.3.2"
pytest-html = "^4.1.1"
respx = "^0.21.1"

[tool.poetry.group.typing.dependencies]
# Packages for type checking
mypy = "^1.13.0"
pyre-check = "^0.9.22"

# Extensions for type checking
types-pyyaml = "^6.0.12.20240808"
types-requests = "^2.32.0.20241016"
types-tabulate = "^0.9.0"
types-ujson = "^5.10.0.20240515"

[tool.autopep8]
# Raise default maximum line length
max_line_length = 120

[tool.flake8]
# Raise default maximum line length
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
log_level = "INFO"
addopts = "-s"

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"
check_untyped_defs = true
